--- a/main.html
+++ b/main.html
@@ -4,10 +4,46 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <style>
+        .container {
+            width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 2px solid black;
+            border-radius: 15px;
+            text-align: center; 
+            background-color: #f4f4f4;
+        }
+        .red, .green, .yellow {
+            display: inline-block;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%; 
+            margin: 10px; 
+        }
+        .red {
+            background-color: red;
+        }
+
+        .green {
+            background-color: green;
+        }
+
+        .yellow {
+            background-color: yellow;
+        }
+    </style>
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <div class="red"></div>
+        <div class="green"></div>
+        <div class="yellow"></div>
+    </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
